--- a/index.html
+++ b/index.html
@@ -40,21 +40,20 @@
 
           <div class="form-check my-2 text-white-50">
               <input type="radio" name="q1" value="B">
-              <label class="form-check-babel"> a</label>
+              <label class="answers form-check-babel"> a</label>
             </div>
         </div>
-
 
         <div class="my-5">
             <p class="lead font-weight-normal">2.Choose the correct HTML element to define important text?</p>
             <div class="form-check my-2 text-white-50">
               <input type="radio" name="q2" value="A" checked>
-              <label class="form-check-babel"> important </label>
+              <label class="answers form-check-babel"> strong </label>
             </div>
   
             <div class="form-check my-2 text-white-50">
                 <input type="radio" name="q2" value="B">
-                <label class="form-check-babel"> strong </label>
+                <label class=" form-check-babel"> important </label>
               </div>
           </div>
 
@@ -68,7 +67,7 @@
     
               <div class="form-check my-2 text-white-50">
                   <input type="radio" name="q3" value="B">
-                  <label class="form-check-babel">static</label>
+                  <label class="answers form-check-babel">static</label>
                 </div>
             </div>
 
@@ -82,14 +81,17 @@
       
                 <div class="form-check my-2 text-white-50">
                     <input type="radio" name="q4" value="B">
-                    <label class="form-check-babel">z-index</label>
+                    <label class="answers form-check-babel">z-index</label>
                   </div>
               </div>
 
               <div class="text-center">
                 <input type="submit" class="btn btn-light"> 
-              </div>
       </form>
+        &nbsp;
+        &nbsp;
+      <button class="show btn btn-light">Show Answers</button>
+    </div>
     </div>
   </div>
 
